# run-clang-format

./: .gitignore  .yamllint.yaml  Makefile  README.md  pyproject.toml  run-clang-format.py  run_clang_format.py
.github/: CODEOWNERS
.github/workflows/: code-format.yaml  code-lint.yaml  eof-newline.yaml  gh-action-lint.yaml  markdown.yaml  pr-title.yaml  pyproject.yaml  release.yaml  typos.yaml  yaml.yaml
tools/: release.py
