[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "run-clang-format"
version = "1.0.0"
description = "Run clang-format in parallel over directories"

readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Victor Baranov", email = "bar.victor.2002@gmail.com"}
]
keywords = [
    "cli",
    "automation",
    "developer-tools",
    "productivity",
]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/vbvictor/run-clang-format"
Repository = "https://github.com/vbvictor/run-clang-format"
Issues = "https://github.com/vbvictor/run-clang-format/issues"
Changelog = "https://github.com/vbvictor/run-clang-format/releases"

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "ruff==0.14.13",
    "black==25.11.0",
    "yamllint==1.37.1",
    "build==1.4.0",
    "twine==6.2.0",
]

[project.scripts]
run-clang-format = "run_clang_format:main"

[tool.setuptools]
py-modules = ["run_clang_format"]

[tool.ruff]
# Ignore line length rules (E501) - using black for formatting
lint.ignore = ["E501"]
